<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <EditText
        android:id="@+id/surname_editText"
        android:layout_width="275sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/surname_staff"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textCursorDrawable="@drawable/colored_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="275sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/name_staff"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textCursorDrawable="@drawable/colored_cursor"
        app:layout_constraintEnd_toEndOf="@+id/surname_editText"
        app:layout_constraintStart_toStartOf="@+id/surname_editText"
        app:layout_constraintTop_toBottomOf="@+id/surname_editText" />

    <EditText
        android:id="@+id/lastname_editText"
        android:layout_width="275sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/lastname_staff"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textCursorDrawable="@drawable/colored_cursor"
        app:layout_constraintEnd_toEndOf="@+id/name_editText"
        app:layout_constraintStart_toStartOf="@+id/name_editText"
        app:layout_constraintTop_toBottomOf="@+id/name_editText" />
</androidx.constraintlayout.widget.ConstraintLayout>

