<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_item"
        android:textColor="#979797"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/count_item"
        android:textColor="#979797"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/info_name_item"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/info_name_item"
        app:layout_constraintTop_toBottomOf="@+id/info_name_item" />

    <TextView
        android:id="@+id/textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_item"
        android:textColor="#979797"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/info_count_item"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/info_count_item"
        app:layout_constraintTop_toBottomOf="@+id/info_count_item" />

    <TextView
        android:id="@+id/textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date_item"
        android:textColor="#979797"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/info_user_item"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/info_user_item"
        app:layout_constraintTop_toBottomOf="@+id/info_user_item" />

    <TextView
        android:id="@+id/info_name_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textview"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        tools:text="Название" />

    <TextView
        android:id="@+id/info_count_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textview3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textview3"
        app:layout_constraintTop_toBottomOf="@+id/textview3"
        tools:text="Название" />

    <TextView
        android:id="@+id/info_user_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textview5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textview5"
        app:layout_constraintTop_toBottomOf="@+id/textview5"
        tools:text="Название" />

    <TextView
        android:id="@+id/info_date_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textview4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textview4"
        app:layout_constraintTop_toBottomOf="@+id/textview4"
        tools:text="Название" />

    <TextView
        android:id="@+id/info_type_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textview6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textview6"
        app:layout_constraintTop_toBottomOf="@+id/textview6"
        tools:text="Название" />

    <TextView
        android:id="@+id/textview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/type_item"
        android:textColor="#979797"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/info_date_item"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/info_date_item"
        app:layout_constraintTop_toBottomOf="@+id/info_date_item" />
</androidx.constraintlayout.widget.ConstraintLayout>