<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name_item"
        android:textColor="@color/secondTextColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stock_start_count_item"
        android:textColor="@color/secondTextColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/info_name_stock_item"
        app:layout_constraintStart_toStartOf="@+id/info_name_stock_item"
        app:layout_constraintTop_toBottomOf="@+id/info_name_stock_item" />

    <TextView
        android:id="@+id/textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stock_balance_count_item"
        android:textColor="#979797"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/info_start_count_stock_item"
        app:layout_constraintStart_toStartOf="@+id/info_start_count_stock_item"
        app:layout_constraintTop_toBottomOf="@+id/info_start_count_stock_item" />

    <TextView
        android:id="@+id/info_name_stock_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textview"
        app:layout_constraintStart_toStartOf="@+id/textview"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        tools:text="Ноутбук" />

    <TextView
        android:id="@+id/info_start_count_stock_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textview3"
        app:layout_constraintStart_toStartOf="@+id/textview3"
        app:layout_constraintTop_toBottomOf="@+id/textview3"
        tools:text="1000 шт." />

    <TextView
        android:id="@+id/info_balance_stock_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textview5"
        app:layout_constraintStart_toStartOf="@+id/textview5"
        app:layout_constraintTop_toBottomOf="@+id/textview5"
        tools:text="500 шт." />
</androidx.constraintlayout.widget.ConstraintLayout>